# MTA-Computer-Science-

./: README.md
FinalProject - MusiciansAndConcerts/: CMakeLists.txt  Q5-output.txt  README.md  ciList.c  ciList.h  common.c  common.h  concert.c  concert.h  main.c  mpiList.c  mpiList.h  musician.c  musician.h  musicians-normalized.txt  presenting.txt  tree.c  tree.h
Year 1 Semester 1/: targilRecurrtion.c  targilStudentAvg.c  targilStudents2.c  targilTAKI.c
Year 1 Semester 2/BinaryTrees/: CMakeLists.txt  Q1.c  Q2.c  Q3.h  Q3functions.c  Q3main.c  Q4main.c
Year 1 Semester 2/BitFields/: CMakeLists.txt  Q1.h  Q1functions.c  Q1main.c  Q2.h  Q2functions.c  Q2main.c  Q3.h  Q3functions.c  Q3main.c  Q4.h  Q4functions.c  Q4main.c
Year 1 Semester 2/Lists/: CMakeLists.txt  Q1.c  Q2a.c  Q2b copy.c  Q2b.c  Q2c.c  Q2d.c  Q3a.c  Q3b.c  Q3c.c  Q3d.c  Q3e.c
Year 1 Semester 2/Pointers and Allocations/: CMakeLists.txt  Q4.h  Q4functions.c  main.c  meow.c  project2-Q1A.c  project2-Q1B.c  project2-Q2.c  project2-Q3.c
